update openapi spec; build web model
